k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-cloud-infra
  labels:
    app: go-cloud-infra
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-cloud-infra 
  type: ClusterIP
